Take snapshot on server